# braidz_analysis

./: .gitignore  .pre-commit-config.yaml  README.md  env.yaml  environment.yaml  pyproject.toml
notebooks/: 01_basic_usage.ipynb  02_opto_analysis.ipynb  03_saccade_analysis.ipynb  04_visual_stim_analysis.ipynb  analysis_opto_intensity_duration.ipynb  dnax_analysis_example.ipynb  general_behavior_analysis.ipynb  read_braidz_exmaple.ipynb  test.ipynb
scripts/: analyse_and_plot.py  braid_cleanup.py  braidz_writer.py  data_trimming.py
src/braidz_analysis/: __init__.py  __init__.py.md  analysis.py  braidz.py  braidz.py.md  config.py  filtering.py  helpers.py  io.py  kinematics.py  params.py  plotting.py  processing.py  trajectory.py  types.py
src/braidz_analysis/processing/: __init__.py  analysis.py  core.py  filtering.py  interface.py  params.py  utils.py
