[project]
name = "braidz-analysis"
version = "0.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cvxpy>=1.6.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "natsort>=8.4.0",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "pyarrow>=18.1.0",
    "pynumdiff>=0.1.2",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
braidz-analysis = { workspace = true }

[dependency-groups]
dev = [
    "pip-tools>=7.4.1",
    "pre-commit>=4.0.1",
    "ruff>=0.8.3",
    "braidz-analysis",
    "pip>=24.3.1",
]

