[project]
name = "braidz-analysis"
version = "0.3.0"
description = "Analysis tools for fruit fly flight trajectories from the Strand-Braid tracking system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cvxpy>=1.6.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "mosek>=11.1.2",
    "natsort>=8.4.0",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "polars>=1.36.1",
    "pyarrow>=18.1.0",
    "pycircstat2>=0.1.8",
    "pynumdiff>=0.1.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
braidz-analysis = { workspace = true }

[dependency-groups]
dev = [
    "pip-tools>=7.4.1",
    "pre-commit>=4.0.1",
    "ruff>=0.8.3",
    "braidz-analysis",
    "pip>=24.3.1",
]

