[project]
name = "braidz-analysis"
version = "0.3.0"
description = "Analysis tools for fruit fly flight trajectories from the Strand-Braid tracking system"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["drosophila", "fly", "tracking", "behavior", "neuroscience", "saccade"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    # Core scientific computing
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    # Utilities
    "tqdm>=4.60.0",
    "pynumdiff>=0.1.2",
    # Optional but recommended for faster CSV parsing
    "pyarrow>=12.0.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
]

[project.optional-dependencies]
notebooks = [
    "jupyter>=1.0.0",
    "ipykernel>=6.20.0",
]
dev = [
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/braidz_analysis"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
